# playwright-tests

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  conftest.py  index.html  pyproject.toml  requirements.txt  run.py  run2.py  run_docker.py
.github/workflows/: test.yml  test_docker.yml  test_docker_old_slow.yml
10/: index.html
10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
10/widgets/: categories-trend.json  duration.json  executors.json  status-chart.json  summary.json
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
29/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
36/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
elements/: base_element.py  button.py  checkbox.py  download_link.py  dropdown.py  file_upload.py  image.py  input.py  slider.py
fixtures/: pages.py  settings.py
pages/: base_page.py
tests/: test_1.py
tools/: logger.py
(+788 files in other folders)
