[project]
name = "playwright-tests"
version = "0.1.0"
description = "Автоматизация тестирования с Playwright и Allure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "allure-pytest>=2.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyspellchecker>=0.8.4",
    "pytest-repeat>=0.9.4",
]

[tool.pytest.ini_options]
addopts = "-s -v --alluredir=results/allure-results"

# Настройки поиска тестов
python_files = ["*_tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Регистрация маркеров
markers = [
    "debug: Маркировка для тестов, которые отлаживаются в данный момент",
]
